# gnome-twitch-2

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  assets.sql  build.rs  meson.build
assets/css/: custom.css
assets/ui/: main.glade  main.glade~
data/: meson.build  meson_post_install.py  net.olback.GnomeTwitch2.desktop  net.olback.GnomeTwitch2.gresource.xml  net.olback.GnomeTwitch2.gschema.xml
data/css/: custom.css
data/ui/: about.glade  about.glade~  main.glade  main.glade~  profile.glade  settings.glade  twitch-auth.glade
src/: cache.rs  error.rs  log.rs  macros.rs  main.rs  resources.rs  rt.rs  user.rs
src/backends/: gstreamer.rs  gstreamer_opengl.rs  gstreamer_vaapi.rs  mod.rs
src/helix/: mod.rs
src/resources/: cache.rs  loader.rs  mod.rs
src/twitch/: builder.rs  error.rs  extras.rs  mod.rs  utils.rs
src/twitch/response/: clip.rs  game.rs  mod.rs  stream.rs  user.rs  user_follow.rs
src/ui/: about.rs  auth.rs  chat.rs  mod.rs  player.rs  profile.rs  search.rs  settings.rs  twitch.rs  views.rs
src/ui/cards/: game.rs  live.rs  mod.rs
src/ui/chat/: info.rs  mod.rs
src/ui/views/: channels.rs  following.rs  games.rs  mod.rs
