[package]
name = "gnome-twitch-2"
version = "0.1.0"
authors = ["Edwin Svensson <gnome-twitch-2@olback.net>"]
edition = "2018"
description = "Watch your favorite Twitch streamers in an GTK app!"
homepage = "https://github.com/olback/gnome-twitch-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI
gtk = { version = "0.9", features = [ "v3_22_30" ] }
gio = "0.9"
gdk = "0.13"
glib = "0.10"
# I/O
#reqwest = "0.10"
#tokio = { version = "0.2", features = [ "full" ] }
#tokio-tungstenite = "0.11"
