[package]
name = "gnome-twitch-2"
version = "0.1.0"
authors = ["Edwin Svensson <gnome-twitch-2@olback.net>"]
edition = "2018"
description = "Watch your favorite Twitch streamers in an GTK app!"
homepage = "https://github.com/olback/gnome-twitch-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI
gtk = { version = "0.9", features = [ "v3_22_30" ] }
gio = "0.9"
gdk = "0.13"
gdk-pixbuf = "0.9"
glib = "0.10"
webkit2gtk = "0.10" # Only used to authenticate, may be replaced by a user redirect.
gst = { package = "gstreamer", version = "0.16" }
# Data
serde = { version = "1.0", features = [ "derive" ] }
url = "2"
lazy_static = "1.4"
# Asset Cache
dirs = "3.0"
hex = "0.4"
rusqlite = { version = "0.24", features = [ "bundled" ] }
# I/O
tokio = { version = "0.2", features = [ "full" ] }
reqwest = { version = "0.10", features = [ "json" ] }
#tokio-tungstenite = "0.11"
keyring = "0.9"
